Vac weekly update

--- a/content/updates/2024-10-14.md
+++ b/content/updates/2024-10-14.md
@@ -33,8 +33,57 @@ draft: false
   - Finalized results for the last message handling article
 
 ### vac:tke:
+- `vac:tke:codex:v1-supply-tokenomics:validator`
+  - introduced a basic model for the validator (and watcher) role
+- `vac:tke:codex:v1-supply-tokenomics:litepaper`
+  - started reviewing the mainnet litepaper
+- `vac:tke:nomos:intro-base-layer-economy:tx-fees`
+  - finalized reading about the EIP-1559 for Nomos tx fee market
+  - understood the possibility of implementing it on Nomos
+- `vac:tke:nomos:intro-base-layer-economy:mixnet`
+  - rewrote part of the previous work on the economics of Mixnets
+- `vac:tke:nomos:intro-base-layer-economy:da-fee`
+  - researched the Tokenomics of the Data Availability Layer
+- `vac:tke:status:aura-incentives:xp-program`
+  - expanding the analysis on L2 economics
+  - monitoring progress of the two branches of staking contract development
+- `vac:tke:waku:incentivized-rln-mainnet:rln-economy`
+  - review and feedback to Francks RLN onchain analysis
+  - following Sergei's progress
+- `vac:tke:ift:catsfishing-mvp:minimal-economy`
+  - sync with Juan on cats fishing modeling, reviewing his work 
+  - Prepared and gave presentation on this end
+  - Finished writeups on token econnomics canvas, monetary policy, token flow.
+  - Reviewed sims by Martin and dashboard by Frederico
+- `vac:tke:ift:based:write-up`
+  - Started working towards based deployment strategy writeup
+- `vac:tke:ift:tokenomics-research-forum:ve3`
+  - researched EIP1559 & beyond for blogpost
+- `vac:tke:ift:tokenomics-research-forum:ve3`
+  - researching ve(3,3) for the potential blog post
 
 ### vac:dst:
+- `waku:waku-scaling:test-store-protocol-at-scale`
+    - Discovered issue where sometimes 412 is returned when querying for store messages
+    - Check Tanya results for store testing
+- `vac:libp2p-evaluation:regression-testing`
+    - Found Kubernetes workers that have problems
+        - Probably out of sync?
+        - Bandwidth increased not dependant on version
+        - [Notion notes](https://www.notion.so/Nim-libp2p-v1-6-0-regression-testing-September-2024-ongoing-10a8f96fb65c8055bd33db7dd5745441?pvs=4#1198f96fb65c80a4835ae9981616d6de)
+        - [Discord thread](https://discord.com/channels/864066763682218004/1113778766657880127/1293151427367014410)
+- `admin/misc`:
+    - NCT writing and reviewing, major efforts
+        - Getting NCT defined, timelined, accurate
+        - Rewrites, meetings, 1:1s
+        - PR reviews and edits
+- `codex:codex-comparison:matrices-deployments`
+    - Codex support and discussions
+        - Find out how best to continue supporting Codex, and support better
+        - Agree on division of BitTorrent work
+    - Codex meetings
+        - BitTorrent meeting
+        - DSN comparison meeting
 
 ### vac:qa:
 - `waku:status-go-functional-testing-2024q4:migrate-to-status-backend`
@@ -95,6 +144,39 @@ draft: false
 	- 1 cc is ooo for Monday 14th October (Akshaya)
 
 ### vac:sc:
+- `vac:sc:status:staking-protocol-v1:testing`
+    - [PR#48 test(RewardsStreamerMP): ensure bonusMP and maxMP are decreased](https://github.com/vacp2p/staking-reward-streamer/pull/48)
+    - [Issue #43 initialMP (bonusMP) should be considered in calculations ](https://github.com/vacp2p/staking-reward-streamer/issues/43)
+    - [Issue #52 Staking too low balance can cause MP to be zero.](https://github.com/vacp2p/staking-reward-streamer/issues/52)
+    - Add test to ensure `bonusMP` and `maxMP` are decreased proportionally at unstake
+        - https://github.com/vacp2p/staking-reward-streamer/pull/48
+- `vac:sc:status:staking-protocol-v1:merging-existing-solutions`
+    - Staking Reward Streamer
+        - [PR#39 feat: add StakeVault and implements StakeManager interfa[](https://)[](https://)ce into RewardsStreamerMP](https://github.com/vacp2p/staking-reward-streamer/pull/39)
+    -  Stake Manager
+        - [Issue #147 bug(StakeManeger): unstake does not reconsider changes in expiredMP for estimation](https://github.com/logos-co/staking/issues/147)
+        - [Issue #148 feat(StakeManager): add function to owner enable emergency exit](https://github.com/logos-co/staking/issues/148)
+        -  [PR#150 refactor(StakeManager): extract interfaces and rename variables to merge functionalty with StakingRewardStreamer](https://github.com/logos-co/staking/pull/150)
+- `vac:sc:status:staking-protocol-v1:formal-verification`
+    - Added invariant that `sumOfBalancesIsTotalStaked`
+        - https://github.com/vacp2p/staking-reward-streamer/pull/42
+    - Refactoed `potentialMP` to `maxMP` as needed to proof that `accountMPLessEqualAccountMaxMP` invariant
+        - https://github.com/vacp2p/staking-reward-streamer/pull/45
+    - Added invariant that `accountMPGreateEqualAccountStakedBalance`
+        - https://github.com/vacp2p/staking-reward-streamer/pull/47
+- `vac:sc:status:staking-protocol-v1:upgradeability`
+    - Research on Upgradability
+- `vac:sc:status:xp-token-v1:token-implementation`
+    - implemented base XP ERC20 token https://github.com/vacp2p/staking-reward-streamer/pull/10
+    - updated XP Token to use Ownable2Step https://github.com/vacp2p/staking-reward-streamer/pull/51
+- `vac:sc:status:xp-nft-v1:token-implementation`
+    - worked on based implementation of XP NFT Token https://github.com/vacp2p/staking-reward-streamer/pull/12
+        - added tests
+        - added a base metadata generator
+        - implemented SVG generator
+        - implemented URL generator
+- `codex::contracts-formal-verification`
+    - finalized PR "verify slots transitions and that a slot can be paid only once" https://github.com/codex-storage/codex-contracts-eth/pull/188
 
 ### vac:nim:
 - `tooling:vac:lsp`
