Vac weekly update

--- a/content/updates/2024-10-21.md
+++ b/content/updates/2024-10-21.md
@@ -10,18 +10,11 @@ draft: false
 ## Vac 2024/10/21
 
 ### vac:p2p:
-- `nimlibp2p:vac:maintenance`
-    - Dependency resolution issue on Nim's `version-2-0` branch
-        - [PR](https://github.com/vacp2p/nim-libp2p/pull/1216)
-        - [Nimble Issue](https://github.com/nim-lang/nimble/issues/1277)
-        - Investigate a bit more, after working around the SAT resolution loads of nim test errors began appearing. Due to this the PR was pinned to the latest working ref of Nim `version-2-0`.
-        - Created [Issue](https://github.com/vacp2p/nim-libp2p/issues/1219) to unpin version when it's stable again.
-    - Review open PRs
-- `ift:gossipsub-perf-improvements`
-  - Completed blogpost on IDONTWANT message performance
-  - Completed feedback on large message performance improvements blogpost to finalize it
-  - Created test plans for staggered message sending paper. Was able to run small tests locally. Configuring to run it on dst test machine
-	- nimble causes some dependency issues on old commits, working on it
+- `nimlibp2p:vac:webrtc-transport`
+  - Worked on merging the protocols on nim-webrtc
+  - Worked on nim-libp2p webrtc-direct-transport
+- `misc/admin`
+  - Spent some time with the Waku team explaining circuit-relay / hole punching
 
 ### vac:tke:
 - `vac:tke:ift:based:write-up`
