Vac monthly report

--- a/content/monthly/2024-10.md
+++ b/content/monthly/2024-10.md
@@ -1,10 +1,317 @@
 ---
-title: "2024-09 Vac monthly"
+title: "2024-10 Vac monthly"
 tags:
   - "vac-monthly"
-date: 2024-09-29
-lastmod: 2024-09-29
+date: 2024-10-31
 draft: false
 ---
 
-## Vac Monthly Report 2024/09
+## Vac Monthly Report 2024/10
+
+### Tokenomics
+
+#### highlights
+
+- Support to Based deployment strategy
+- Design and simulation of Cats Fishing tokenomics and game
+- Introduction to the token design of Nomos base layer
+- Definition of Codex incentivized testnet structure
+- Reformulation of roles in Codex Protocol and introduction to token simulations
+- Design and simulation of the AURA incentives
+
+#### report
+
+- `vac:tke:ift:based`
+  - Overview: 
+    - created writeup related optimal Univ3 deployment strats
+  - Completed tasks:
+    - `vac:tke:ift:based:write-up`
+- `vac:tke:ift:catsfishing-mvp`
+  - Overview: 
+    - simulation of incentives and staking mechanisms
+    - writing up a whitepaper
+    - Finished writeups on token econnomics canvas, monetary policy, token flow.
+    - implementation of a dashboard
+  - Completed tasks:
+    - `vac:tke:ift:catsfishing-mvp:monetary-policy`
+    - `vac:tke:ift:catsfishing-mvp:location-models`
+    - `vac:tke:ift:catsfishing-mvp:staking-brainstorming`
+- `vac:tke:nomos:intro-base-layer-economy`
+  - Overview: 
+    - review of transaction fee mechanisms for block and blog space (DA layer)
+    - proposal of a transaction fee mechanism for Nomos
+    - re-evaluation of previous work on mixnet incentives, inc. control of competitiveness loss
+    - proposal of an incentive mechanism for mixnet
+- `vac:tke:codex:v1-supply-tokenomics`
+  - Overview: 
+    - introduction of the validator role
+    - adaptation of the Proof Aggregator role
+    - revision of the mainnet litepaper
+    - started simulation of the CDX token dynamics
+  - Completed tasks:
+    - `vac:tke:codex:v1-supply-tokenomics:validator`
+    - `vac:tke:codex:v1-supply-tokenomics:redesign-proof-aggregator`
+- `vac:tke:codex:incentivized-testnet`
+  - Overview: 
+    - definitive design of testnet incentives
+  - Completed tasks:
+    - `vac:tke:codex:incentivized-tesnet:list-incentives`
+- `vac:tke:status:aura-incentives`
+  - Overview: 
+    - design and simulation of the XPs and AURA dynamics
+    - drafting a possible smart contract architecture for AURA
+    - monitoring progress of the two branches of staking contract development
+- `vac:tke:waku:incentivized-rln-mainnet`
+  - Overview: 
+    - following discussion around RLN on sharding
+    - discussion with Waku team and others on RLN onchain analysis
+    - feedback on the RLN documentation
+- `vac:tke:ift:tokenomics-research-forum`
+  - Overview: 
+    - research and draft of blogpost on ve(3,3)
+    - research and draft of blogpost on EIP-1559
+  - Completed tasks:
+    - `vac:tke:ift:tokenomics-research-forum:eip-1559`
+
+### QA
+
+#### highlights
+- Increased projects knowledge base by creating QA Strategy Docs for Codex and Waku
+- Increased Nomos testing capabilites by adding basic functionality tests
+- Increased Waku interop testing coverage by adding edge cases and e2e scenarios
+- Started colaboration with Status QA team in builind a new status-go functional testing framework
+
+#### report
+
+- `vac:qa:ift:projects-qa-strategy-2024q4`
+	- Overwiew:
+		- Collected and organized information on the Waku QA strategy to document current capabilities for each Waku implementation. Identified gaps and areas for improvement.
+		- Began similar analysis for Nomos.
+	- Delivered Deliverables:
+		- [JS-Waku QA Strategy Document](https://www.notion.so/JS-WAKU-VAC-QA-Testing-Coverage-Report-11f8f96fb65c8075acb1f10415916d51)
+		- [nWaku QA Strategy Document](https://www.notion.so/NWAKU-VAC-QA-Testing-Coverage-Report-1238f96fb65c80c7bb3ced6d72421a35)
+		- [Go-Waku QA Strategy Document](https://www.notion.so/GO-WAKU-VAC-QA-Testing-Coverage-Report-1228f96fb65c80de9667e708e2583963)
+	- Completed tasks:
+		- `vac:qa:ift:projects-qa-strategy-2024q4:waku`
+
+- `vac:qa:nomos:da-testing-2024q4`
+	- Overview:
+		- Expanded Nomos DA test coverage by adding new tests that build on top of existing ones.
+		- Coordinated with developers on optimal areas to add tests for maximum benefit.
+		- Updated the code coverage workflow multiple times to align with build process updates and the migration to a self-hosted runner.
+		
+	- Delivered Deliverables:
+	    - PRs:
+            * [Da dispersal unit tests update ](https://github.com/logos-co/nomos-node/pull/720)
+            * [Codecov workflow output directory cleanup](https://github.com/logos-co/nomos-node/pull/866)
+            * [Codecov workflow conflicting output directory](https://github.com/logos-co/nomos-node/pull/862)
+            * [Coverage workflow to run on ubuntu-22.0](https://github.com/logos-co/nomos-node/pull/836)
+		
+		- CI Runs:
+            * [Da behavior membership tests](https://github.com/logos-co/nomos-node/actions/runs/11594358879)
+            * [Codecov](https://github.com/logos-co/nomos-node/actions/runs/11605450142)
+		
+		- Issues Found:
+		    * [Test indexer_integration::test_indexer failed on Ubuntu 24](https://github.com/logos-co/nomos-node/issues/848)
+
+- `vac:qa:waku:interop-testing-2024q4`
+	- Overview:
+		- Expanded Waku interop coverage by adding new tests related to negative scenarios and edge cases.
+		- Started adding new tests for e2e and complex scenarios involving a larger number of nodes.
+		- Connected with developers to gather feedback for e2e scenarios, NWaku CI integration, and future work.
+	- Delivered Deliverables:
+		- PRs:
+            * [store v3 edge test cases](https://github.com/waku-org/waku-interop-tests/pull/76)
+            * [adjust edge test cases for CI runs](https://github.com/waku-org/waku-interop-tests/pull/81)
+            * [release more CI storage by removing unwated software](https://github.com/waku-org/waku-interop-tests/pull/79)
+            * [histogram metric update](https://github.com/waku-org/waku-interop-tests/pull/84)
+            * [waku_px_peers_sent metric update](https://github.com/waku-org/waku-interop-tests/pull/75)
+            * [fix light-push failure](https://github.com/waku-org/waku-interop-tests/pull/82)
+		  
+		- CI Runs:
+            * [Nwaku->Nwaku tests](https://github.com/waku-org/waku-interop-tests/actions/runs/11540778495/job/32122007620)
+            * [Nwaku->Gowaku tests](https://github.com/waku-org/waku-interop-tests/actions/runs/11539734974/job/32119740214)
+		  
+		- Issues Found:
+            * [Store API's ascending flag not working properly](https://github.com/waku-org/nwaku/issues/3143)
+            * [lack of info for REST APIs](https://github.com/waku-org/nwaku/issues/3135)
+            * [pubsub topic && content_topic encoding is optional](https://github.com/waku-org/nwaku/issues/3128)
+    - Completed tasks:
+            - `vac:qa:waku:interop-testing-2024q4:edge-cases`
+
+- `vac:qa:waku:status-go-functional-testing-2024q4`
+	- Overview:
+		- Gained understanding of the `status-backend` functionality and its use cases.
+		- Reviewed work and changes made by the Status QA team in updating and creating a functional test framework for `status-go`.
+		- Began replacing the `status-cli` tool with `status-backend`.
+		- Initiated a PR to migrate `status-cli` tests to the `status-go` functional test framework.
+
+### DST
+#### highlights
+#### report
+
+### SC
+#### highlights
+- Organized and recorded learn up session about smart contract upgradeability
+- Moved from epoch based staking system to index based system
+- Feature parity between staking protocol almost done
+- Implemented first versions of XP token and NFT
+
+#### report
+- `vac:sc:ift:eip-discussions_2024q4`
+    - EIP discussions meeting about upgradeability patterns
+    - **Completed tasks**
+        - `vac:sc:ift:eip-discussions_2024q4:2024-10-18`
+    - **Deliverables**
+        - [Video recording](https://www.notion.so/Upgradeability-Patterns-1248f96fb65c80e2bef8ec7b5df8cf8f)
+- `vac:sc:codex:formal-verification_2024q4`
+    - Rather little progress here but we've implemented a few new rules
+    - **Completed tasks**
+        - Pending
+    - **Deliverables**
+        - [Marketplace.spec](https://github.com/codex-storage/codex-contracts-eth/blob/master/certora/specs/Marketplace.spec)
+        - [StateChanges.spec](https://github.com/codex-storage/codex-contracts-eth/blob/master/certora/specs/StateChanges.spec)
+- `vac:sc:status:staking-protocol-v1`
+    - Integration of `StakeVault` into `RewardsStreamerMP` contract
+    - Ported over most relevant formal verification rules
+    - Correct implementation of MP generation
+    - **Relevant links**
+        - [NCT commitment status on GitHub](https://github.com/vacp2p/staking-reward-streamer/milestone/1)
+        - [NCT tasks on GitHub](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20staking-protocol-v1%22)
+    - **Completed tasks**
+        - [Pending](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20staking-protocol-v1%22)
+    - **Deliverables**
+        - [RewardsStreamerMP contract](https://github.com/vacp2p/staking-reward-streamer/blob/main/src/RewardsStreamerMP.sol)
+        - [StakeVault contract](https://github.com/vacp2p/staking-reward-streamer/blob/main/src/StakeVault.sol)
+- `vac:sc:status:xp-nft-v1`
+    - Implementation of a first version of the soulbound NFT for Status XP balances
+    - Includes interchangable metadata generator
+    - **Relevant links**
+        - [NCT commitment status on GitHub](https://github.com/vacp2p/staking-reward-streamer/milestone/6)
+        - [NCT tasks on GitHub](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aopen%20is%3Aissue%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20xp-nft-v1%22)
+    - **Completed tasks**
+        - `vac:sc:status:xp-nft-v1:token-implementation`
+    - **Deliverables**
+        - [XP token contract implementation](https://github.com/vacp2p/staking-reward-streamer/pull/12)
+        - [Tests proving its functionality (or lack thereof)](https://github.com/vacp2p/staking-reward-streamer/pull/12)
+- `vac:sc:status:xp-token-v1`
+    - First version of XP token implementation nearly done
+    - Finalizing aggregation of XP balances across XP providers
+    - **Relevant links**
+        - [NCT commitment status on GitHub](https://github.com/vacp2p/staking-reward-streamer/milestone/5)
+        - [NCT tasks on GitHub](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aopen%20is%3Aissue%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20xp-token-v1%22)
+    - **Completed tasks**
+        - [Pending](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aopen%20is%3Aissue%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20xp-token-v1%22)
+    - **Deliverables**
+        - [XP Token contract](https://github.com/vacp2p/staking-reward-streamer/blob/main/src/XPToken.sol)
+
+### DST
+#### highlights
+#### report
+
+### SC
+#### highlights
+- Organized and recorded learn up session about smart contract upgradeability
+- Moved from epoch based staking system to index based system
+- Feature parity between staking protocol almost done
+- Implemented first versions of XP token and NFT
+
+#### report
+- `vac:sc:ift:eip-discussions_2024q4`
+    - EIP discussions meeting about upgradeability patterns
+    - **Completed tasks**
+        - `vac:sc:ift:eip-discussions_2024q4:2024-10-18`
+    - **Deliverables**
+        - [Video recording](https://www.notion.so/Upgradeability-Patterns-1248f96fb65c80e2bef8ec7b5df8cf8f)
+- `vac:sc:codex:formal-verification_2024q4`
+    - Rather little progress here but we've implemented a few new rules
+    - **Completed tasks**
+        - Pending
+    - **Deliverables**
+        - [Marketplace.spec](https://github.com/codex-storage/codex-contracts-eth/blob/master/certora/specs/Marketplace.spec)
+        - [StateChanges.spec](https://github.com/codex-storage/codex-contracts-eth/blob/master/certora/specs/StateChanges.spec)
+- `vac:sc:status:staking-protocol-v1`
+    - Integration of `StakeVault` into `RewardsStreamerMP` contract
+    - Ported over most relevant formal verification rules
+    - Correct implementation of MP generation
+    - **Relevant links**
+        - [NCT commitment status on GitHub](https://github.com/vacp2p/staking-reward-streamer/milestone/1)
+        - [NCT tasks on GitHub](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20staking-protocol-v1%22)
+    - **Completed tasks**
+        - [Pending](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20staking-protocol-v1%22)
+    - **Deliverables**
+        - [RewardsStreamerMP contract](https://github.com/vacp2p/staking-reward-streamer/blob/main/src/RewardsStreamerMP.sol)
+        - [StakeVault contract](https://github.com/vacp2p/staking-reward-streamer/blob/main/src/StakeVault.sol)
+- `vac:sc:status:xp-nft-v1`
+    - Implementation of a first version of the soulbound NFT for Status XP balances
+    - Includes interchangable metadata generator
+    - **Relevant links**
+        - [NCT commitment status on GitHub](https://github.com/vacp2p/staking-reward-streamer/milestone/6)
+        - [NCT tasks on GitHub](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aopen%20is%3Aissue%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20xp-nft-v1%22)
+    - **Completed tasks**
+        - `vac:sc:status:xp-nft-v1:token-implementation`
+    - **Deliverables**
+        - [XP token contract implementation](https://github.com/vacp2p/staking-reward-streamer/pull/12)
+        - [Tests proving its functionality (or lack thereof)](https://github.com/vacp2p/staking-reward-streamer/pull/12)
+- `vac:sc:status:xp-token-v1`
+    - First version of XP token implementation nearly done
+    - Finalizing aggregation of XP balances across XP providers
+    - **Relevant links**
+        - [NCT commitment status on GitHub](https://github.com/vacp2p/staking-reward-streamer/milestone/5)
+        - [NCT tasks on GitHub](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aopen%20is%3Aissue%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20xp-token-v1%22)
+    - **Completed tasks**
+        - [Pending](https://github.com/vacp2p/staking-reward-streamer/issues?q=is%3Aopen%20is%3Aissue%20label%3A%22NCT%20task%22%20label%3A%22commitment%3A%20xp-token-v1%22)
+    - **Deliverables**
+        - [XP Token contract](https://github.com/vacp2p/staking-reward-streamer/blob/main/src/XPToken.sol)
+
+
+### ACZ
+#### highlights
+#### report
+
+### Nim
+#### highlights
+#### report
+
+### Nescience
+#### highlights
+- Started implementing the sandboxed testnet as a PoC for NSSA.
+- Researched and refined key protocol component for NSSA.
+- Researched and refined execution type circuits for NSSA.
+- Addressed issues and PR (made by SP1) related to our [zkvm results blogpost](https://vac.dev/rlog/zkVM-testing).
+
+#### report
+- `vac:nes:state-separation-architecture-poc`
+    - Overview:
+        - Implemented memory crates for the sandbox testnet, including simple mempool and storage implementation.
+        - Implemented accounts crates for the sandbox testnet, including UTXO and account-based interface implementation.
+        - Defined key protocol including spending, public, private, and ephemeral keys.
+        - Defined execution types kernel circuits for NSSA, including private, SE, and DE kernel circuits.
+
+
+    - List of deliverables (ordered as in [task management](https://www.notion.so/1158f96fb65c80a2aeb5f400fff2a8e4?v=1158f96fb65c81bc8833000c8957b942&pvs=4)):
+        - [Implementation of mempool crate](https://github.com/vacp2p/nescience-testnet/pull/6).
+        - [Implementation of Merkle Tree crate for public transactions](https://github.com/vacp2p/nescience-testnet/pull/8).
+        - [Implementation of UTXO commitments storage](https://github.com/vacp2p/nescience-testnet/pull/9).
+        - [Implementation of nullifiers tree Storage](https://github.com/vacp2p/nescience-testnet/pull/11).
+        - [Test of the storage module](https://github.com/vacp2p/nescience-testnet/pull/13).
+        - [Definition of keys specification for NSSA](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=11b8f96fb65c80589e21ff469033cc58&pm=s).
+        - [Aztec-like/Zcash-like approach](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=1228f96fb65c80dcb3d9db4df0030e4f&pm=s).
+        - [Monero-like approach](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=1228f96fb65c80ed845aeb0a1f743662&pm=s).
+        - [Several key constructions](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=1178f96fb65c8052a4a3d4413c0a8c14&pm=s).
+        - [NSSA key protocol](https://www.notion.so/Key-protocol-specifications-1178f96fb65c8052a4a3d4413c0a8c14?pvs=4#1278f96fb65c8024a2f1df93a1649430).
+        - [Implementation of UTXO core module](https://github.com/vacp2p/nescience-testnet/pull/14).
+        - [Implementation of account keys module](https://github.com/vacp2p/nescience-testnet/pull/17).
+        - [Implementation of account core module](https://github.com/vacp2p/nescience-testnet/pull/19/).
+        - [Test of the UTXO and accounts modules](https://github.com/vacp2p/nescience-testnet/pull/16/).
+        - [Zkvm/VM interaction issue](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=12d8f96fb65c801a9bb0e10fc6db99f9&pm=s).
+        - [Private execution circuit](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=12a8f96fb65c8061afd7f22061472ce9&pm=s).
+        - [SE execution circuit](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=12a8f96fb65c8035aa25e5f3de8aa454&pm=s).
+        - [DE execution circuit](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=1178f96fb65c8150bd42c9f8ae9dbe50&pm=s).
+        - [Unified full description of kernel circuits for NSSA](https://www.notion.so/State-separation-architecture-PoC-1128f96fb65c80c1877eda1ddd37b034?p=1178f96fb65c81348dbde88ad24660f9&pm=s).
+
+    - Completed tasks:
+        - `vac:nes:state-separation-architecture-poc:memory`
+        - `vac:nes:state-separation-architecture-poc:key-protocol`
+        - `vac:nes:state-separation-architecture-poc:account`
+        - `vac:nes:state-separation-architecture-poc:execution-types`
