Vac weekly updates

--- a/content/updates/2024-11-04.md
+++ b/content/updates/2024-11-04.md
@@ -7,6 +7,7 @@ lastmod: 2024-11-04
 draft: false
 ---
 
+
 ## Vac 2024/11/04
 
 ### vac:p2p:
@@ -61,6 +62,34 @@ draft: false
     - Repeat [nimlibp2p 1.6.0 simulations](https://www.notion.so/Nim-libp2p-v1-6-0-regression-testing-October-2024-1308f96fb65c80869c97e373a6c7cfc8) after fix has been done in workers with wrong sync
 
 ### vac:qa:
+- `vac:qa:ift:projects-qa-strategy-2024q4:nomos`
+	- Finished [nomos coverage report doc](https://www.notion.so/Nomos-VAC-QA-Test-Coverage-Report-12e8f96fb65c807d8c45dd2dce6df31b) and got it reviewed
+- `vac:qa:waku:interop-testing-2024q4:e2e-scenarios`
+	- Investigated and fixed the light-push with [node restart error](https://github.com/waku-org/waku-interop-tests/pull/82)
+	- Histogram metrics [updates](https://github.com/waku-org/waku-interop-tests/pull/84)
+    - Add new E2E Tests to [PR 80](https://github.com/waku-org/waku-interop-tests/pull/80) & [PR 83](https://github.com/waku-org/waku-interop-tests/pull/83)
+    - Fix review points on [PR 80](https://github.com/waku-org/waku-interop-tests/pull/80)
+    - Analyze potenial issues and open [issue #3168](https://github.com/waku-org/nwaku/issues/3168) and
+  [issue #3169](https://github.com/waku-org/nwaku/issues/3169)
+- `waku:interop-testing-2024q4:known-issues`
+    - Start draft for the task and looking for new tests 
+- `waku:status-go-functional-testing-2024q4:migrate-to-status-backend`
+	- Reviews for Sam's PRs
+    - Addressed all review comments in [PR 1 on 1 message](https://github.com/status-im/status-go/pull/6022) and merged into [Main migration PR](https://github.com/status-im/status-go/pull/5990)
+    - Addressed review comments on main [Draft PR](https://github.com/status-im/status-go/pull/5990) and made changes for Event validation and other minor issues
+    - Migration of other Tests in package like 1-1 meesage, test_create_private_groups and onboarding helpers as required.
+- `nomos:da-testing-2024q4:basic-functionality-tests`
+    - [Test run1 for Nomos/Da - in progress](https://www.notion.so/DA-Test-Plan-Run1-084243a3256c47ae9eee1cfd46fd469b)  
+    - fix: Apply Nomos library code review recommendations 
+     [PR 898 - in progress 75%](https://github.com/logos-co/nomos-node/pull/898)  
+    - chore: Da behavior membership tests
+     [PR 819 - in review 95%](https://github.com/logos-co/nomos-node/pull/819)
+    - Executor behaviour connects to other executor behaviour for dispersal
+     [Issue 900 - open](https://github.com/logos-co/nomos-node/issues/900)  
+    - Certain amount of dispersal messages have not reached the validator on self-hosted runner
+    [Issue 902 - open](https://github.com/logos-co/nomos-node/issues/902)
+- `admin/misc`
+	- Monthly reports
 
 ### vac:acz:
 - `ift:de-mls-testnet:login-specs`
@@ -90,6 +119,30 @@ draft: false
     - 1 cc was ooo for whole week
 
 ### vac:sc:
+- `vac:sc:status:xp-token-v1:token-implementation`
+    - continued with the same issue https://github.com/vacp2p/staking-reward-streamer/issues/65
+- `vac:sc:status:staking-protocol-v1:documentation`
+    - Mathematical specification
+        - [added view functions](https://github.com/vacp2p/staking-reward-streamer/pull/67/commits/25c69662468f0f5d36e4c8b3f035d38bb5098dc3)to help retrieve lock time, absolute maximum mps
+        - added [verification for maximum absolute mps](https://github.com/vacp2p/staking-reward-streamer/pull/67/commits/6fd3875bd38aab72cf76c5c9f7ac9dcecc8bc0e0)
+        - [fixed formula of lock retrieval](https://github.com/vacp2p/staking-reward-streamer/pull/67/commits/8b3129fcd9154e012eb8469dc8c2bc14007fc890)
+        - formatting improvements
+- `vac:sc:status:staking-protocol-v1:upgradeability`
+    - RewardStreamerMP: Proxy Upgradability 
+        - https://github.com/vacp2p/staking-reward-streamer/commit/f355da5c579d6f765f3a162f791ebbeab17221d5
+- `vac:sc:status:staking-protocol-v1:merging-existing-solutions`
+    - Finished work on allowing users to exit the system
+        - https://github.com/vacp2p/staking-reward-streamer/pull/72
+        - Had a call later with the team, Ricardo brought up good points on why exiting should be done differently
+        - Will update the PR
+    - Address feedback comments on `lock()` feature and landed it
+        - https://github.com/vacp2p/staking-reward-streamer/pull/69
+    - Address feedback comments on register vaults functionality
+        - https://github.com/vacp2p/staking-reward-streamer/pull/71
+    - Meeting with team to discuss
+        - Multiple lock times
+        - Adding stake to existing vaults
+        - system exists
 
 ### vac:nim:
 - `tooling:vac:lsp`
@@ -103,6 +156,25 @@ draft: false
 
 
 ### vac:rfc:
+Last week:
+- `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
+    - Started review for 19/WAKU2-LIGHTPUSH and 15/WAKU-BRIDGE - 
+    - Started move to draft for Waku enr rfc - https://github.com/vacp2p/rfc-index/pull/107
+- `ift:rfc:status:status-specs-to-rfc-index-migration`
+    - Completion of task, published a draft PR - https://github.com/vacp2p/rfc-index/pull/109 . It is a big PR, containing 17 RFCs. Currently in review.
+- `ift:rfc:nomos:data-availability-raw-rfc-2024q4`
+    - Continued with the raw RFC, will publish an early draft PR of the raw RFC after the Nomos offsite.
+- `ift:rfc:vac:rfc-culture-establishment-2024q4`
+    - Brainstorming.
+    - Reached the consensus on the new details of COSS and Notion, based on several conversations we've had with different people.
+This week:
+- `ift:rfc:waku:updates-of-mature-waku-rfcs-2024q4`
+    - Ask for feedback for 19/WAKU2-LIGHTPUSH and 15/WAKU-BRIDGE updates
+- `ift:rfc:vac:rfc-culture-establishment-2024q4`
+    - Further brainstorming.
+    - New version of Notion homepage, publishing messages with benefits of why a team should publish to RFC-index in respective Discords and update to COSS.
+- `admin/misc`
+    - Sick days (3)
 
 ### vac:nes:
 - `vac:state-separation-architecture-poc:execution-types`
